feature: create product, variation, option & item